--- a/page 2.html
+++ b/page 2.html
@@ -181,9 +181,15 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center py-4 border-top mt-5">
-        <p>&copy; COSRX</p>
+    <footer class="text-center py-3" style="background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(243,208,208,1) 23%, rgba(203,86,134,1) 48%, rgba(255,136,185,1) 72%, rgba(147,86,111,1) 100%);">
+        <p>Follow us:
+            <a href="#" class="mx-2">Instagram</a> |
+            <a href="#" class="mx-2">Twitter</a> |
+            <a href="#" class="mx-2">YouTube</a>
+        </p>
     </footer>
+
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
