--- a/page1.html
+++ b/page1.html
@@ -165,14 +165,14 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
+        </div>
     </section>
 
 
 
-    <footer class="text-center py-3">
+    <footer class="text-center py-3" style="background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(243,208,208,1) 23%, rgba(203,86,134,1) 48%, rgba(255,136,185,1) 72%, rgba(147,86,111,1) 100%);">
         <p>Follow us:
             <a href="#" class="mx-2">Instagram</a> |
             <a href="#" class="mx-2">Twitter</a> |
