--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" style="text-align: center;">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
@@ -57,8 +57,13 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-light text-center py-3">
-        <p>&copy; 2024 COSRX</p>
+    <footer class="text-center py-3" style="background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(243,208,208,1) 23%, rgba(203,86,134,1) 48%, rgba(255,136,185,1) 72%, rgba(147,86,111,1) 100%);">
+        <p>Follow us:
+            <a href="#" class="mx-2">Instagram</a> |
+            <a href="#" class="mx-2">Twitter</a> |
+            <a href="#" class="mx-2">YouTube</a>
+        </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
