--- a/page 2.html
+++ b/page 2.html
@@ -59,9 +59,11 @@
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
+                    <a style="text-decoration: none;" href="page3.html">
                     <img src="ASSETS/IMAGE/product1.jpg" alt="Aloe Soothing Sun Cream" class="img-fluid mb-3">
                     <h5>Aloe Soothing Sun Cream SPF 50+</h5>
                     <p class="price">Rp 159.000</p>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
