--- a/page3.html
+++ b/page3.html
@@ -5,31 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COSRX Product Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="page3.css">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">COSRX</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav" style="text-align: center;">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+     <!-- Navbar -->
+
+    <nav class="navbar">
+        <div class="container mt-3">
+
+            <h5 class="logo">COSRX<style>
+                    @import url('https://fonts.googleapis.com/css2?family=Poltawski+Nowy:ital,wght@0,400..700;1,400..700&display=swap');
+                </style>
+            </h5>
+
+            <div class="nav2" style="margin-right: 38%;">
+                <ul class="menu">
+                    <li>
+                        <a href="page1.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
+                    <li>
+                        <a href="#">Product</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Promo</a>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Gallery</a>
                     </li>
                 </ul>
             </div>
+            <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </div>
+        <div class="container-form d-flex justify-content container mt-3" style="position: absolute;">
+            <form class="example" action="action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+
     </nav>
 
     <!-- Main content -->
