--- a/page1.html
+++ b/page1.html
@@ -30,13 +30,13 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="page 2.html">Product</a>
+                        <a href="page 2.html">Acne Series</a>
                     </li>
                     <li>
-                        <a href="youtube.com">About Us</a>
+                        <a href="page4.html">Brightening Series</a>
                     </li>
                     <li>
-                        <a href="#">Gallery</a>
+                        <a href="#">About Us</a>
                     </li>
                 </ul>
             </div>
