--- a/page4.html
+++ b/page4.html
@@ -30,10 +30,10 @@
                         <a href="page1.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Acne Series</a>
+                        <a href="page 2.html">Acne Series</a>
                     </li>
                     <li>
-                        <a href="page4.html">Brightening Series</a>
+                        <a href="#">Brightening Series</a>
                     </li>
                     <li>
                         <a href="#">About Us</a>
@@ -55,37 +55,38 @@
     <!-- Product Best Seller Section -->
     <div class="container">
         <!-- First Product Best Seller Row -->
-        <h2 class="text-center my-5">Acne Series</h2>
+        <h2 class="text-center my-5">Brightening Series</h2>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+               <a href="/page5.html">
                 <div class="product-card text-center p-3 border">
-                    <a style="text-decoration: none;" href="page3.html">
-                    <img src="ASSETS/IMAGE/product5.png" alt="Aloe Soothing Sun Cream" class="img-fluid mb-3">
-                    <h5>Low pH Good Morning Cleanser</h5>
-                    <p class="price">
-                        Rp 58.650 </p>
+                    <a style="text-decoration: none;" href="page5.html">
+                    <img src="ASSETS/IMAGE/product24.png" alt="Aloe Soothing Sun Cream" class="img-fluid mb-3">
+                    <h5>Refresh AHA/BHA Vitamin C Daily Toner</h5>
+                    <p class="price">Rp 171.5000</p>
                     </a>
                 </div>
+                </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product17.jpg" alt="Advanced Snail Mucin" class="img-fluid mb-3">
-                    <h5>BHA Blackhead Power Liquid</h5>
-                    <p class="price">Rp220.500</p>
+                    <img src="ASSETS/IMAGE/product9.png" alt="Advanced Snail Mucin" class="img-fluid mb-3">
+                    <h5>Full Fit Propolis Synergy Toner</h5>
+                    <p class="price">Rp 245.000</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product3.jpg" alt="AHA/BHA Clarifying Toner" class="img-fluid mb-3">
-                    <h5>AHA/BHA Clarifying Treatment Toner</h5>
-                    <p class="price">Rp 200.000</p>
+                    <img src="ASSETS/IMAGE/product25.png" alt="AHA/BHA Clarifying Toner" class="img-fluid mb-3">
+                    <h5>Hydrium Watery Toner</h5>
+                    <p class="price">Rp81.750</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product6.jpg" alt="Oil-Free Lotion" class="img-fluid mb-3">
-                    <h5>Acne Pimple Master Patch</h5>
-                    <p class="price">Rp 99.000</p>
+                    <img src="ASSETS/IMAGE/product26.jpg" alt="Oil-Free Lotion" class="img-fluid mb-3">
+                    <h5>Hyaluronic Acid Intensive Cream</h5>
+                    <p class="price">Rp224.250</p>
                 </div>
             </div>
         </div>
@@ -94,65 +95,45 @@
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product18.jpg" alt="Low PH Good Morning Cleanser" class="img-fluid mb-3">
-                    <h5>Centella Blemish Cream</h5>
-                    <p class="price">Rp224.250</p>
+                    <img src="ASSETS/IMAGE/product1.jpg" alt="Low PH Good Morning Cleanser" class="img-fluid mb-3">
+                    <h5>Aloe Soothing Sun Cream SPF50+ PA+++</h5>
+                    <p class="price">Rp 159.000</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product19.png" alt="Acne Pimple Master Patch" class="img-fluid mb-3">
-                    <h5>AC Collection Calming Foam Cleanser</h5>
-                    <p class="price">Rp 215.000</p>
+                    <img src="ASSETS/IMAGE/product27.jpg" alt="Acne Pimple Master Patch" class="img-fluid mb-3">
+                    <h5>Centella Water Alcohol-Free Toner</h5>
+                    <p class="price">Rp215.000
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product20.png" alt="Hydrium Centella Ampoule" class="img-fluid mb-3">
-                    <h5>AC Collection Lightweight Soothing Moisturizer</h5>
-                    <p class="price">Rp 349.000</p>
+                    <img src="ASSETS/IMAGE/product28.png" alt="Hydrium Centella Ampoule" class="img-fluid mb-3">
+                    <h5>The Vitamin C 23 Serum</h5>
+                    <p class="price">Rp233.750</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product21.png" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>AC Collection Blemish Spot Serum</h5>
-                    <p class="price">Rp 415.000</p>
+                    <img src="ASSETS/IMAGE/product14.jpg" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
+                    <h5>Galactomyces 95 Whitening Power Essence</h5>
+                    <p class="price">Rp. 260.000</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
                     <img src="ASSETS/IMAGE/product15.png" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>AC Collection Ultimate Spot Cream</h5>
-                    <p class="price">Rp 315.000</p>
+                    <h5>B5 D-Panthenol Ampoule</h5>
+                    <p class="price">Rp300.000</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE//product22.png" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>AC Collection Calming Liquid Mild</h5>
-                    <p class="price">Rp 389.000</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product23.jpg" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>AC Collection Calming Foam Cleanser</h5>
-                    <p class="price">Rp. 190.000</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product13.jpg" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>One Step Green Hero Calming Pad</h5>
-                    <p class="price">Rp 299.000</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="product-card text-center p-3 border">
-                    <img src="ASSETS/IMAGE/product16.png" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
-                    <h5>Pure Fit Cica Cream</h5>
-                    <p class="price">Rp 439.000</p>
+                    <img src="ASSETS/IMAGE//product30.png" alt="Salicylic Acid Cleanser" class="img-fluid mb-3">
+                    <h5>The Retinol 0.5 Oil</h5>
+                    <p class="price">Rp332.000</p>
                 </div>
             </div>
         
