--- a/page5.html
+++ b/page5.html
@@ -52,21 +52,21 @@
         <div class="row">
             <!-- Product Image -->
             <div class="col-md-6 text-center">
-                <img src="ASSETS/IMAGe/product5.png" alt="COSRX Ultimate Spot Cream" class="img-fluid product-img">
+                <img src="ASSETS/IMAGe/product24.png" alt="COSRX Ultimate Spot Cream" class="img-fluid product-img">
             </div>
             <!-- Product Details -->
             <div class="col-md-6">
-                <h2 class="product-title">Low pH Good Morning Gel Cleanser</h2>
+                <h2 class="product-title">Refresh AHA/BHA Vitamin C Daily Toner</h2>
                 <p class="price">
-                    Rp 58.650 </p>
+                    Rp 171.500 </p>
                 <p class="product-description">
-                    Pembersih wajah dengan formula lembut yang bagus digunakan pada pagi dan malam hari. Mampu membersihkan kulit sensitif sekalipun dengan lembut berkat kandungannya yang memiliki kadar acid yang mirip dengan kadar pH kulit. Gel cleanser ini mampu menenangkan, mengeksfoliasi, melembapkan sekaligus membersihkan kulit wajah.
-                     Pembersih wajah ini juga mampu mengangkat sel-sel kulit mati dan minyak berlebih yang muncul selama tidur sehingga wajah menjadi bersih dan segar.
+                    oner peremajaan yang dipatenkan yang mengandung AHA, BHA dan Vitamin C untuk pengelupasan ringan untuk kulit lembut dan cerah.
+                     yang akan menghaluskan, mengencangkan, dan mencerahkan kulit Anda.
                 </p>
                 <ul class="product-ingredients">
-                    <li>Menenangkan kulit</li>
-                    <li>Menenangkan kulit</li>
-                    <li>Cocok untuk kulit sensitif</li>
+                    <li>cocok untuk semua jenis kulit.</li>
+                    <li>membantu menghaluskan dan mencerahkan kulit.</li>
+                    <li>mengandung actinidia Chinensis dan hylocereus undatus</li>
                     <!-- Add more ingredients here -->
                 </ul>
             </div>
